--- a/v/latest/index.html
+++ b/v/latest/index.html
@@ -23,7 +23,7 @@
 <header id="title-block-header">
 <h1 class="title">RO-Index: A survey of Research Object usage</h1>
 </header>
-<p><small><em> This manuscript (<a href="https://stain.github.io/ro-index-paper/v/056af20c8c4faba2def6b10ca4986647f73e978a/">permalink</a>) was automatically generated from <a href="https://github.com/stain/ro-index-paper/tree/056af20c8c4faba2def6b10ca4986647f73e978a">stain/ro-index-paper@056af20</a> on September 13, 2019. </em></small></p>
+<p><small><em> This manuscript (<a href="https://stain.github.io/ro-index-paper/v/871fa0be6f97b286cb61aba65daf7f3eabd00d84/">permalink</a>) was automatically generated from <a href="https://github.com/stain/ro-index-paper/tree/871fa0be6f97b286cb61aba65daf7f3eabd00d84">stain/ro-index-paper@871fa0b</a> on September 13, 2019. </em></small></p>
 <h2 id="authors">Authors</h2>
 <ul>
 <li><p><strong>Stian Soiland-Reyes</strong><br> <img src="images/orcid.svg" alt="ORCID icon" class="inline_icon" /> <a href="https://orcid.org/0000-0001-9842-9718">0000-0001-9842-9718</a> · <img src="images/github.svg" alt="GitHub icon" class="inline_icon" /> <a href="https://github.com/stain">stain</a> · <img src="images/twitter.svg" alt="Twitter icon" class="inline_icon" /> <a href="https://twitter.com/soilandreyes">soilandreyes</a><br> <small> Department of Computer Science, The University of Manchester, UK; Informatics Institute, Faculty of Science, University of Amsterdam, NL · Funded by BioExcel-2 (European Commission H2020-INFRAEDI-02-2018-823830) </small></p></li>
@@ -170,19 +170,20 @@ Ethics policies: All research must have been conducted within an appropriate eth
 <li>VoID datasets http://www.openphacts.org/specs/2013/WD-datadesc-20130912/ <span class="citation" data-cites="vGs0hZI 13RYarvnd">[<a href="#ref-13RYarvnd" role="doc-biblioref">10</a>,<a href="#ref-vGs0hZI" role="doc-biblioref">3</a>]</span></li>
 <li>DataONE Data packages <span class="citation" data-cites="B4ffHizQ">[<a href="#ref-B4ffHizQ" role="doc-biblioref">11</a>]</span></li>
 <li>DataLad <a href="https://www.datalad.org/datasets.html" class="uri">https://www.datalad.org/datasets.html</a> <span class="citation" data-cites="lciHFS2H">[<a href="#ref-lciHFS2H" role="doc-biblioref">12</a>]</span></li>
+<li><a href="http://bloodhound-tracker.net/">BloodHound</a> / <a href="https://gbif.org">Global Biodiversity Information Facility</a> GBIF Darwin Core Archives <span class="citation" data-cites="tLIHmzFN">[<a href="#ref-tLIHmzFN" role="doc-biblioref">13</a>]</span> e.g. <span class="citation" data-cites="11XlStsyA">[<a href="#ref-11XlStsyA" role="doc-biblioref">14</a>]</span> <a href="https://www.gbif.org/dataset/search" class="uri">https://www.gbif.org/dataset/search</a></li>
 </ul>
 <h4 id="ore-based-research-objects">ORE-based research objects</h4>
 <ul>
-<li>CWL Viewer <a href="https://view.commonwl.org/workflows" class="uri">https://view.commonwl.org/workflows</a> <span class="citation" data-cites="xhtkrFLT">[<a href="#ref-xhtkrFLT" role="doc-biblioref">13</a>]</span></li>
+<li>CWL Viewer <a href="https://view.commonwl.org/workflows" class="uri">https://view.commonwl.org/workflows</a> <span class="citation" data-cites="xhtkrFLT">[<a href="#ref-xhtkrFLT" role="doc-biblioref">15</a>]</span></li>
 <li>RO Bundle <a href="https://w3id.org/bundle/2014-11-05/" class="uri">https://w3id.org/bundle/2014-11-05/</a> <span class="citation" data-cites="dijZpInF">[<a href="#ref-dijZpInF" role="doc-biblioref">5</a>]</span></li>
-<li>Workflow PROV corpus <span class="citation" data-cites="eV4QvWFF">[<a href="#ref-eV4QvWFF" role="doc-biblioref">14</a>]</span></li>
-<li>CWLProv 10.1093/gigascience/giz095 aka <span class="citation" data-cites="YsYtVdV4">[<a href="#ref-YsYtVdV4" role="doc-biblioref">15</a>]</span></li>
+<li>Workflow PROV corpus <span class="citation" data-cites="eV4QvWFF">[<a href="#ref-eV4QvWFF" role="doc-biblioref">16</a>]</span></li>
+<li>CWLProv 10.1093/gigascience/giz095 aka <span class="citation" data-cites="YsYtVdV4">[<a href="#ref-YsYtVdV4" role="doc-biblioref">17</a>]</span></li>
 <li><a href="http://www.rohub.org/" class="uri">http://www.rohub.org/</a> <span class="citation" data-cites="Ut1RxNtm">[<a href="#ref-Ut1RxNtm" role="doc-biblioref">4</a>]</span></li>
 <li><a href="http://rohub.linkeddata.es/" class="uri">http://rohub.linkeddata.es/</a></li>
 <li>SEEK: <a href="https://fairdomhub.org/investigations" class="uri">https://fairdomhub.org/investigations</a></li>
 <li>BDBags with <a href="http://minid.bd2k.org/">MinID</a> [<span class="citation" data-cites="3FDNoHin"><a href="#ref-3FDNoHin" role="doc-biblioref">6</a></span>; ]</li>
-<li>Zenodo e.g. <span class="citation" data-cites="Ypeevn8I">[<a href="#ref-Ypeevn8I" role="doc-biblioref">16</a>]</span></li>
-<li>Mendeley Data eg <span class="citation" data-cites="1CrTaYKc2">[<a href="#ref-1CrTaYKc2" role="doc-biblioref">17</a>]</span></li>
+<li>Zenodo e.g. <span class="citation" data-cites="Ypeevn8I">[<a href="#ref-Ypeevn8I" role="doc-biblioref">18</a>]</span></li>
+<li>Mendeley Data eg <span class="citation" data-cites="1CrTaYKc2">[<a href="#ref-1CrTaYKc2" role="doc-biblioref">19</a>]</span></li>
 <li>Maven <a href="https://repository.mygrid.org.uk/artifactory/ops/org/openphacts/data/" class="uri">https://repository.mygrid.org.uk/artifactory/ops/org/openphacts/data/</a></li>
 <li>DocumentObject <a href="https://github.com/binfalse/DocumentObjectCompiler/" class="uri">https://github.com/binfalse/DocumentObjectCompiler/</a></li>
 <li>GitHub search</li>
@@ -190,11 +191,11 @@ Ethics policies: All research must have been conducted within an appropriate eth
 </ul>
 <h3 id="softwarecontainer-based-research-objects">Software/container-based research objects</h3>
 <ul>
-<li><a href="https://sci-f.github.io/" class="uri">https://sci-f.github.io/</a> <span class="citation" data-cites="OMB8E9Yi">[<a href="#ref-OMB8E9Yi" role="doc-biblioref">18</a>]</span></li>
+<li><a href="https://sci-f.github.io/" class="uri">https://sci-f.github.io/</a> <span class="citation" data-cites="OMB8E9Yi">[<a href="#ref-OMB8E9Yi" role="doc-biblioref">20</a>]</span></li>
 <li><a href="https://frictionlessdata.io/specs/data-package/" class="uri">https://frictionlessdata.io/specs/data-package/</a></li>
 <li>The Journal of Research Objects <a href="http://jro.world/" class="uri">http://jro.world/</a> (see also <a href="https://docs.google.com/presentation/d/1c4eSbTbaJ2ydEujvL1AA1rWghVFesy__nEtRIZeI-kA/edit?usp=sharing">presentation</a></li>
 <li>Tonkaz <a href="https://docs.google.com/presentation/d/1YRKCM1KwHyNOz7B6AP2j5qIHjl7Ew9CnAtvXA1xSeNY/edit#slide=id.g419a3a9d09_1_93" class="uri">https://docs.google.com/presentation/d/1YRKCM1KwHyNOz7B6AP2j5qIHjl7Ew9CnAtvXA1xSeNY/edit#slide=id.g419a3a9d09_1_93</a></li>
-<li><a href="https://www.activepapers.org">ActivePaper</a> / HDF5 <span class="citation" data-cites="RpWvrttS">[<a href="#ref-RpWvrttS" role="doc-biblioref">19</a>]</span> &gt; HDF5 dataset attributes are used to store metadata, including a dataflow graph that records provenance (requirement 5), but also creation time stamps and a data type indicator distinguishing references and executable code from “plain” datasets.</li>
+<li><a href="https://www.activepapers.org">ActivePaper</a> / HDF5 <span class="citation" data-cites="RpWvrttS">[<a href="#ref-RpWvrttS" role="doc-biblioref">21</a>]</span> &gt; HDF5 dataset attributes are used to store metadata, including a dataflow graph that records provenance (requirement 5), but also creation time stamps and a data type indicator distinguishing references and executable code from “plain” datasets.</li>
 </ul>
 <h4 id="nd-generation-ros">2nd generation ROs</h4>
 <ul>
@@ -227,7 +228,7 @@ Ethics policies: All research must have been conducted within an appropriate eth
 <p>https://zenodo.org/communities/ro/?page=1&amp;size=20</p>
 <p>https://developers.zenodo.org/#metadata-formats</p>
 <h4 id="prototype-workflow">Prototype workflow</h4>
-<p>A <a href="https://github.com/stain/ro-index-paper/blob/master/code/data-gathering/workflows/zenodo-zip-content.cwl">prototype workflow</a> is being developed using <a href="https://www.commonwl.org/">Common Workflow Language</a> <span class="citation" data-cites="Ppg8PzBL">[<a href="#ref-Ppg8PzBL" role="doc-biblioref">20</a>]</span>, figure <a href="#fig:square-image">1</a> shows how a a community sub-section of the <a href="https://zenodo.org/">Zenodo</a> repository is being inspected to list the filenames contained within its downloadable ZIP files.</p>
+<p>A <a href="https://github.com/stain/ro-index-paper/blob/master/code/data-gathering/workflows/zenodo-zip-content.cwl">prototype workflow</a> is being developed using <a href="https://www.commonwl.org/">Common Workflow Language</a> <span class="citation" data-cites="Ppg8PzBL">[<a href="#ref-Ppg8PzBL" role="doc-biblioref">22</a>]</span>, figure <a href="#fig:square-image">1</a> shows how a a community sub-section of the <a href="https://zenodo.org/">Zenodo</a> repository is being inspected to list the filenames contained within its downloadable ZIP files.</p>
 <figure>
 <embed src="https://w3id.org/cwl/view/git/4360a062e7cff5aadacbf401e8e743a660657680/code/data-gathering/workflows/zenodo-zip-content.cwl?format=svg" id="fig:square-image" /><figcaption><span>Figure 1:</span> <strong>CWL workflow: List ZIP content for Zenodo community</strong> Visualization by CWL Viewer <a href="https://w3id.org/cwl/view/git/4360a062e7cff5aadacbf401e8e743a660657680/code/data-gathering/workflows/zenodo-zip-content.cwl" class="uri">https://w3id.org/cwl/view/git/4360a062e7cff5aadacbf401e8e743a660657680/code/data-gathering/workflows/zenodo-zip-content.cwl</a></figcaption>
 </figure>
@@ -243,7 +244,7 @@ Ethics policies: All research must have been conducted within an appropriate eth
 <li>List filenames within ZIP file</li>
 <li>Detect filenames like “manifest.rdf” within list and return original Zenodo URI or <code>null</code> <em>(in development)</em></li>
 </ol>
-<p>The workflow and its components have been tested with the reference implementation <code>cwltool</code> <span class="citation" data-cites="YRViKAa0">[<a href="#ref-YRViKAa0" role="doc-biblioref">21</a>]</span> which can provide rich provenance captured in CWLProv research objects <span class="citation" data-cites="12kpw3Zbe">[<a href="#ref-12kpw3Zbe" role="doc-biblioref">22</a>]</span> <!-- in press 10.1093/gigascience/giz095--></p>
+<p>The workflow and its components have been tested with the reference implementation <code>cwltool</code> <span class="citation" data-cites="YRViKAa0">[<a href="#ref-YRViKAa0" role="doc-biblioref">23</a>]</span> which can provide rich provenance captured in CWLProv research objects <span class="citation" data-cites="12kpw3Zbe">[<a href="#ref-12kpw3Zbe" role="doc-biblioref">24</a>]</span> <!-- in press 10.1093/gigascience/giz095--></p>
 <p>In developing this prototype several challenges where immediately detected:</p>
 <ul>
 <li>The <a href="https://zenodo.org/oai2d?verb=ListRecords&amp;set=user-ro&amp;metadataPrefix=datacite4">OAI-PMH records</a> contain substansive DataCite information, but do not include the links to the Zenodo record or the ZIP downloads. The identifiers for records is in a form that is specific to OAI-PMH, e.g. <code>oai:zenodo.org:1310621</code> and had to be rewritten to a URI using the same record number.
@@ -393,62 +394,74 @@ Yang Zhang, Fangzhou Xu, Erwin Frise, Siqi Wu, Bin Yu, Wei Xu<br />
 <em>Proceedings of the 2nd International Workshop on BIG Data Software Engineering - BIGDSE ’16</em> (2016) <a href="https://doi.org/gf7hv6">https://doi.org/gf7hv6</a><br />
 DOI: <a href="https://doi.org/10.1145/2896825.2896830">10.1145/2896825.2896830</a></p>
 </div>
+<div id="ref-tLIHmzFN">
+<p>13. <strong>The GBIF Integrated Publishing Toolkit: Facilitating the Efficient Publishing of Biodiversity Data on the Internet</strong><br />
+Tim Robertson, Markus Döring, Robert Guralnick, David Bloom, John Wieczorek, Kyle Braak, Javier Otegui, Laura Russell, Peter Desmet<br />
+<em>PLoS ONE</em> (2014-08-06) <a href="https://doi.org/f6n8jm">https://doi.org/f6n8jm</a><br />
+DOI: <a href="https://doi.org/10.1371/journal.pone.0102623">10.1371/journal.pone.0102623</a> · PMID: <a href="https://www.ncbi.nlm.nih.gov/pubmed/25099149">25099149</a> · PMCID: <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4123864">PMC4123864</a></p>
+</div>
+<div id="ref-11XlStsyA">
+<p>14. <strong>Natural history specimens collected and/or identified and deposited.</strong><br />
+Claudia Baider<br />
+<em>Zenodo</em> (2019-09-12) <a href="https://doi.org/gf75d8">https://doi.org/gf75d8</a><br />
+DOI: <a href="https://doi.org/10.5281/zenodo.3405730">10.5281/zenodo.3405730</a></p>
+</div>
 <div id="ref-xhtkrFLT">
-<p>13. <strong>CWL Viewer: the common workflow language viewer</strong><br />
+<p>15. <strong>CWL Viewer: the common workflow language viewer</strong><br />
 Mark Robinson, Stian Soiland-Reyes, Michael R. Crusoe, Carole Goble<br />
 <em>F1000Research</em> (2017) <a href="https://doi.org/cbq2">https://doi.org/cbq2</a><br />
 DOI: <a href="https://doi.org/10.7490/f1000research.1114375.1">10.7490/f1000research.1114375.1</a></p>
 </div>
 <div id="ref-eV4QvWFF">
-<p>14. <strong>A workflow PROV-corpus based on taverna and wings</strong><br />
+<p>16. <strong>A workflow PROV-corpus based on taverna and wings</strong><br />
 Khalid Belhajjame, Jun Zhao, Daniel Garijo, Aleix Garrido, Stian Soiland-Reyes, Pinar Alper, Oscar Corcho<br />
 <em>Proceedings of the Joint EDBT/ICDT 2013 Workshops on - EDBT ’13</em> (2013) <a href="https://doi.org/gf5m6r">https://doi.org/gf5m6r</a><br />
 DOI: <a href="https://doi.org/10.1145/2457317.2457376">10.1145/2457317.2457376</a></p>
 </div>
 <div id="ref-YsYtVdV4">
-<p>15. <strong>Sharing interoperable workflow provenance: A review of best practices and their practical application in CWLProv</strong><br />
+<p>17. <strong>Sharing interoperable workflow provenance: A review of best practices and their practical application in CWLProv</strong><br />
 Farah Zaib Khan, Stian Soiland-Reyes, Richard O. Sinnott, Andrew Lonie, Carole Goble, Michael R. Crusoe<br />
 <em>Zenodo</em> (2019-07-15) <a href="https://doi.org/gf5tg8">https://doi.org/gf5tg8</a><br />
 DOI: <a href="https://doi.org/10.5281/zenodo.1208477">10.5281/zenodo.1208477</a></p>
 </div>
 <div id="ref-Ypeevn8I">
-<p>16. <strong>W2Share Case Study: Workflow Research Object (Wro)</strong><br />
+<p>18. <strong>W2Share Case Study: Workflow Research Object (Wro)</strong><br />
 Lucas Carvalho, Claudia Bauzer Medeiros<br />
 <em>Zenodo</em> (2018-10-18) <a href="https://doi.org/gf5m6m">https://doi.org/gf5m6m</a><br />
 DOI: <a href="https://doi.org/10.5281/zenodo.1465897">10.5281/zenodo.1465897</a></p>
 </div>
 <div id="ref-1CrTaYKc2">
-<p>17. <strong>CWL run of Alignment Workflow (CWLProv 0.6.0 Research Object)</strong><br />
+<p>19. <strong>CWL run of Alignment Workflow (CWLProv 0.6.0 Research Object)</strong><br />
 Stian Soiland-Reyes<br />
 <em>Mendeley</em> (2018-12-04) <a href="https://doi.org/gf5m6h">https://doi.org/gf5m6h</a><br />
 DOI: <a href="https://doi.org/10.17632/6wtpgr3kbj.1">10.17632/6wtpgr3kbj.1</a></p>
 </div>
 <div id="ref-OMB8E9Yi">
-<p>18. <strong>The Scientific Filesystem</strong><br />
+<p>20. <strong>The Scientific Filesystem</strong><br />
 Vanessa Sochat<br />
 <em>GigaScience</em> (2018-03-13) <a href="https://doi.org/gdwq7f">https://doi.org/gdwq7f</a><br />
 DOI: <a href="https://doi.org/10.1093/gigascience/giy023">10.1093/gigascience/giy023</a> · PMID: <a href="https://www.ncbi.nlm.nih.gov/pubmed/29718213">29718213</a> · PMCID: <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5952957">PMC5952957</a></p>
 </div>
 <div id="ref-RpWvrttS">
-<p>19. <strong>ActivePapers: a platform for publishing and archiving computer-aided research</strong><br />
+<p>21. <strong>ActivePapers: a platform for publishing and archiving computer-aided research</strong><br />
 Konrad Hinsen<br />
 <em>F1000Research</em> (2015-07-14) <a href="https://doi.org/gfrkvv">https://doi.org/gfrkvv</a><br />
 DOI: <a href="https://doi.org/10.12688/f1000research.5773.3">10.12688/f1000research.5773.3</a> · PMID: <a href="https://www.ncbi.nlm.nih.gov/pubmed/26064469">26064469</a> · PMCID: <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4448745">PMC4448745</a></p>
 </div>
 <div id="ref-Ppg8PzBL">
-<p>20. <strong>Common Workflow Language, v1.0</strong><br />
+<p>22. <strong>Common Workflow Language, v1.0</strong><br />
 Peter Amstutz, Michael R. Crusoe, Nebojša Tijanić, Brad Chapman, John Chilton, Michael Heuer, Andrey Kartashov, Dan Leehr, Hervé Ménager, Maya Nedeljkovich, … Luka Stojanovic<br />
 <em>Figshare</em> (2016) <a href="https://doi.org/gf6ppg">https://doi.org/gf6ppg</a><br />
 DOI: <a href="https://doi.org/10.6084/m9.figshare.3115156.v2">10.6084/m9.figshare.3115156.v2</a></p>
 </div>
 <div id="ref-YRViKAa0">
-<p>21. <strong>common-workflow-language/cwltool: cwltool 1.0.20190815141648</strong><br />
+<p>23. <strong>common-workflow-language/cwltool: cwltool 1.0.20190815141648</strong><br />
 Peter Amstutz, Michael R. Crusoe, Farah Zaib Khan, Stian Soiland-Reyes, Manvendra Singh, Kapil Kumar, Anton Khodak, John Chilton, Thomas Hickman, Boysha, … Ryan Spangler<br />
 <em>Zenodo</em> (2019-08-15) <a href="https://doi.org/gf7s2s">https://doi.org/gf7s2s</a><br />
 DOI: <a href="https://doi.org/10.5281/zenodo.3369238">10.5281/zenodo.3369238</a></p>
 </div>
 <div id="ref-12kpw3Zbe">
-<p>22. <strong>Sharing interoperable workflow provenance: A review of best practices and their practical application in CWLProv</strong><br />
+<p>24. <strong>Sharing interoperable workflow provenance: A review of best practices and their practical application in CWLProv</strong><br />
 Farah Zaib Khan, Stian Soiland-Reyes, Richard O. Sinnott, Andrew Lonie, Carole Goble, Michael R. Crusoe<br />
 <em>Zenodo</em> (2019-05-23) <a href="https://doi.org/gf7s2r">https://doi.org/gf7s2r</a><br />
 DOI: <a href="https://doi.org/10.5281/zenodo.3196309">10.5281/zenodo.3196309</a></p>
