--- a/v/latest/index.html
+++ b/v/latest/index.html
@@ -23,7 +23,7 @@
 <header id="title-block-header">
 <h1 class="title">RO-Index: A survey of Research Object usage</h1>
 </header>
-<p><small><em> This manuscript (<a href="https://stain.github.io/ro-index-paper/v/871fa0be6f97b286cb61aba65daf7f3eabd00d84/">permalink</a>) was automatically generated from <a href="https://github.com/stain/ro-index-paper/tree/871fa0be6f97b286cb61aba65daf7f3eabd00d84">stain/ro-index-paper@871fa0b</a> on September 13, 2019. </em></small></p>
+<p><small><em> This manuscript (<a href="https://stain.github.io/ro-index-paper/v/4d410f6b40e4a92ee79156510e04d90df35587a4/">permalink</a>) was automatically generated from <a href="https://github.com/stain/ro-index-paper/tree/4d410f6b40e4a92ee79156510e04d90df35587a4">stain/ro-index-paper@4d410f6</a> on September 13, 2019. </em></small></p>
 <h2 id="authors">Authors</h2>
 <ul>
 <li><p><strong>Stian Soiland-Reyes</strong><br> <img src="images/orcid.svg" alt="ORCID icon" class="inline_icon" /> <a href="https://orcid.org/0000-0001-9842-9718">0000-0001-9842-9718</a> · <img src="images/github.svg" alt="GitHub icon" class="inline_icon" /> <a href="https://github.com/stain">stain</a> · <img src="images/twitter.svg" alt="Twitter icon" class="inline_icon" /> <a href="https://twitter.com/soilandreyes">soilandreyes</a><br> <small> Department of Computer Science, The University of Manchester, UK; Informatics Institute, Faculty of Science, University of Amsterdam, NL · Funded by BioExcel-2 (European Commission H2020-INFRAEDI-02-2018-823830) </small></p></li>
@@ -242,7 +242,7 @@ Ethics policies: All research must have been conducted within an appropriate eth
 <li>Filter for download links that end with <code>*.zip</code></li>
 <li>Retrieve ZIP file</li>
 <li>List filenames within ZIP file</li>
-<li>Detect filenames like “manifest.rdf” within list and return original Zenodo URI or <code>null</code> <em>(in development)</em></li>
+<li>Detect filenames like <code>manifest.rdf</code> or <code>meta.xml</code> within list and return original Zenodo URI or <code>null</code> <em>(in development)</em></li>
 </ol>
 <p>The workflow and its components have been tested with the reference implementation <code>cwltool</code> <span class="citation" data-cites="YRViKAa0">[<a href="#ref-YRViKAa0" role="doc-biblioref">23</a>]</span> which can provide rich provenance captured in CWLProv research objects <span class="citation" data-cites="12kpw3Zbe">[<a href="#ref-12kpw3Zbe" role="doc-biblioref">24</a>]</span> <!-- in press 10.1093/gigascience/giz095--></p>
 <p>In developing this prototype several challenges where immediately detected:</p>
